--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -17,7 +17,8 @@
     "angular-animate": "~1.3.15",
     "animate.css": "~3.2.6",
     "angular-messages": "~1.3.15",
-    "angular-loading-bar": "~0.7.1"
+    "angular-loading-bar": "~0.7.1",
+    "angular-websocket": "~1.0.14"
   },
   "overrides": {
     "mdi": {
