--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -18,7 +18,9 @@
     "animate.css": "~3.2.6",
     "angular-messages": "~1.3.15",
     "angular-loading-bar": "~0.7.1",
-    "angular-websocket": "~1.0.14"
+    "angular-websocket": "~1.0.14",
+    "moment": "~2.10.6",
+    "angular-moment": "~0.10.3"
   },
   "overrides": {
     "mdi": {
